force-app/main/default/objects/WrikeAccountSettings__c/WrikeAccountSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Wrike Account Settings</label>
</CustomObject>