force-app/main/default/objects/WrikeAccountSettings__c/fields/SalesforceFolderId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceFolderId__c</fullName>
    <label>SalesforceFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>