force-app/main/default/objects/WrikeAccountSettings__c/fields/WebHookKey__c.field-meta.xml
<CustomField>
    <fullName>WebHookKey__c</fullName>
    <defaultValue>&quot;VcSjWaHgvPrRfQZ4NpXyKv==&quot;</defaultValue>
    <label>WebHookKey</label>
    <length>80</length>
    <type>Text</type>
</CustomField>