force-app/main/default/objects/WrikeAccountSettings__c/fields/WrikeAccountId__c.field-meta.xml
<CustomField>
    <fullName>WrikeAccountId__c</fullName>
    <label>WrikeAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>