force-app/main/default/objects/WrikeAccountSettings__c/fields/WrikeClientId__c.field-meta.xml
<CustomField>
    <fullName>WrikeClientId__c</fullName>
    <label>WrikeClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>