force-app/main/default/objects/WrikeAccountSettings__c/fields/WrikeClientSecret__c.field-meta.xml
<CustomField>
    <fullName>WrikeClientSecret__c</fullName>
    <label>WrikeClientSecret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>