force-app/main/default/objects/WrikeAccountSettings__c/fields/WrikeServer__c.field-meta.xml
<CustomField>
    <fullName>WrikeServer__c</fullName>
    <defaultValue>&quot;https://www.wrike.com&quot;</defaultValue>
    <label>WrikeServer</label>
    <type>Url</type>
</CustomField>